# python-docling

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  convert.py  main.py
