[project]
name = "python-docling"
version = "0.1.0"
description = ""
authors = [
    {name = "rayhankinan",email = "rayhankinan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "docling (>=2.26.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
